--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,9 @@ marshmallow-sqlalchemy==1.4.2
 pandas==2.2.1
 Flask-Migrate==4.0.5
 firebase-admin==6.4.0
+transformers==4.53.1
+torch==2.7.1
+tokenizers==0.21.2
+celery==5.3.4
+redis==5.0.1
+requests==2.31.0
