--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ marshmallow==3.21.1
 flask-marshmallow==1.1.0
 marshmallow-sqlalchemy==1.4.2
 pandas==2.2.1
-Flask-Migrate==4.0.5
 firebase-admin==6.4.0
 transformers==4.53.1
 torch==2.7.1
@@ -16,3 +15,8 @@ tokenizers==0.21.2
 celery==5.3.4
 redis==5.0.1
 requests==2.31.0
+setuptools>=65.0.0
+wheel>=0.38.0
+Pillow>=10.4.0
+boto3>=1.4.0
+s3transfer
